add_subdirectory(q01_auto_type_deduction)
add_subdirectory(q02_lambda)
add_subdirectory(q03_smart_pointers)
add_subdirectory(q04_move_semantics)
add_subdirectory(q05_structured_bindings)
add_subdirectory(q06_optional_variant)
add_subdirectory(q07_constexpr)
add_subdirectory(q08_concepts)
add_subdirectory(q09_modern_class)
add_subdirectory(q10_ranges)
